# swpp-2025-project-team-06

./: .gitignore  .gitmessage  README.md
.VSCodeCounter/2025-11-28_11-49-16/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-11-28_11-50-26/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/: pull_request_template.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
android/: build.gradle.kts  frontendClassDiagram.md  gradle.properties  settings.gradle.kts  typography-usage.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .dockerignore  Dockerfile  Dockerfile.django  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt  start_cpu_worker.sh  start_gpu_worker.sh
backend/accounts/: request_serializers.py  response_serializers.py  serializers.py  urls.py  views.py
backend/accounts/tests/: test_serializers.py  test_views.py
backend/common/: models.py  serializers.py
backend/common/migrations/: 0001_initial.py
backend/config/: __init__.py  celery.py  redis.py  settings.py  socket_patcher.py  urls.py
backend/config/utils/: qdrant.py
backend/gallery/: decorators.py  delete_db_duplicate.py  gpu_tasks.py  models.py  qdrant_utils.py  reponse_seiralizers.py  reponse_serializers.py  request_serializers.py  response_serializers.py  serializers.py  storage_service.py  tasks.py  tests.py  urls.py  views.py  vision_service.py
backend/gallery/management/commands/: rebuild_rep_vectors.py
backend/gallery/migrations/: 0001_initial.py  0002_photo.py  0002_remove_photo_caption_photo_id_and_more.py  0003_delete_photo.py  0003_tag_created_at_tag_updated_at_alter_photo_created_at_and_more.py  0004_caption_caption_tag.py  0004_remove_photo_tag_tag_id_remove_tag_embedding_and_more.py  0005_repvec_tag.py  0006_rename_caption_tag_photo_caption.py  0007_rename_ct_id_photo_caption_pc_id_and_more.py  0008_alter_photo_caption_caption_id_and_more.py  0008_delete_repvec_tag.py  0009_alter_photo_caption_caption_id_and_more.py  0009_remove_photo_tag_tag_id_photo_tag_tag_and_more.py  0009_rename_caption_id_photo_caption_caption_and_more.py  0010_alter_photo_tag_photo_id.py  0010_remove_photo_tag_tag_id_photo_tag_tag_and_more.py  0010_rename_caption_id_photo_caption_caption_and_more.py  0011_alter_photo_tag_photo_id.py  0011_remove_photo_caption_caption_id_and_more.py  0012_alter_photo_tag_photo_id.py  0013_remove_photo_caption_photo_id_and_more.py
backend/gallery/tests/: test_delete_db_duplicate.py  test_gpu_tasks.py  test_models.py  test_qdrant_utils.py  test_serializers.py  test_storage_service.py  test_tasks.py  test_views.py  test_vision_services.py  tests_tasks.py
backend/search/: decorators.py  embedding_service.py  exceptions.py  response_serializers.py  search_strategies.py  urls.py  views.py
backend/search/tests/: test_embedding_service.py  test_views.py
backend/tag/: serializers.py  urls.py  views.py
embedding/: README.md  api.py  poc-client.py  pyproject.toml
tag-search/: filenames.npy  pyproject.toml  tag-search.py
tag-search/Image_Preprocessing/: img_grouping.py
tag-search/Image_Recommendation/: generate_graph.py  image_recommend.py  image_recommend_with_graph.py  image_recommend_with_rep_vec.py
tag-search/NL_Search/: captioning.py  embedding.py  search.py
tag-search/Tag_Recommendation/: tag_recommend_with_rep_vec.py
tag-search/source/: caption-real-image.npy  embedding_ids.json  image_to_words.json  image_word_graph_weighted.graphml  tag_info.json
(+190 files in other folders)
