[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery==5.5.3",
    "coverage>=7.11.0",
    "django==5.2.7",
    "django-environ==0.12.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-yasg==1.21.11",
    "faiss-cpu>=1.12.0",
    "numpy==2.3.3",
    "pillow==11.3.0",
    "python-dotenv==1.1.1",
    "qdrant-client==1.15.1",
    "redis==6.4.0",
    "requests>=2.32.5",
    "sentence-transformers==5.1.1",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.57.0",
    "faiss-cpu",
    "pymysql>=1.1.2",
    "cryptography>=46.0.3",
]

[tool.coverage.run]
# Specify source packages
source = ["."]
# Exclude test files from coverage measurement
omit = [
    "*/tests.py",
    "*/tests/*",
    "*/test_*.py",
    "*/*tests.py",
    ".venv/*",
    "*/migrations/*",
    "manage.py",
    "config/*",
    "*/__init__.py",
    "*/admin.py",
    "*/urls.py",
    "*/apps.py",
]

[tool.coverage.report]
# Reporting options
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
