[project]
name = "PoC"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers==4.57.1",
    "Pillow",
    "tqdm",
    "scikit-learn",
    "datasets==4.2.0",
    "peft==0.17.1",
    "networkx",
    "accelerate==1.10.1",
    "faiss-cpu==1.12.0",
    "tokenizers==0.22.1",
]